<resources>
    <string name="app_name">lab1-GUI</string>
    <string name="button_text">Oceny</string>
    <string name="imie_TextView">Imię:</string>
    <string name="imie_EditText">Wpisz imię</string>
    <string name="nazwisko_TextView">Nazwisko:</string>
    <string name="nazwisko_EditText">Wpisz nazwisko</string>
    <string name="liczba_ocen_TextView">Liczba ocen:</string>
    <string name="liczba_ocen_EditText">Wpisz liczbę ocen(5–15)</string>
    <string name="gratulacje">Gratulacje! Otrzymujesz zaliczenie!</string>
    <string name="porazka">Wysyłam podanie o zaliczenie warunkowe!</string>
    <string name="komunikatText">Twoja średnia to: </string>
    <string name="buttonSuper">Super :)</string>
    <string name="buttonPorazka">Tym razem ci nie poszło.</string>
    <string name="obliczButtonTekst">Oblicz srednia</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string-array name="tablica">
        <item>Fiz.</item>
        <item>Mat.</item>
        <item>El.</item>
        <item>TC</item>
        <item>PP</item>
        <item>TPI</item>
        <item>TOiS</item>
        <item>AiSD</item>
        <item>MPiS</item>
        <item>AM</item>
        <item>ISM</item>
        <item>ISBD</item>
        <item>MiSK</item>
        <item>SW</item>
        <item>PRiR</item>
    </string-array>
</resources>